    - x2gokdriveselection.c: fix compile error, the xEvent struct (made up of
      union of another struct) needs another layer of curly braces.
    - patches.xorg/: add skeleton for 1.20.3 - needed for OpenSuSE Leap 15.1.
    - patches.xorg/1.20.3: add actual (rebased) patches and potentially
      missing files.
    - patches.xorg/1.18.4: refresh against Ubuntu 16.04/xenial version.
  * debian/control:
    + Grammar fix.
    + Remove dependencies that refer to disabled features.
    + Add build-dependency upon libpam-dev. It would really be libpam0g-dev
      currently, but that looks like a moving target.
    + Add B-D upon x11proto-gl-dev (or nil/hello).
    + Recommend x2goserver >= 4.1.0.4, we'll better stay on the 4.1.x line.
    + Try to pull libxfont1-dev (for old Ubuntu versions such as 16.04/xenial
      that don't support building X.Org against libXfont2) and fallback to
      libxfont-dev to retain the old, default behavior.
  * x2gokdrive.spec:
    + Drop Debian-style formatting in description.
    + Typo fixes.
    + Remove empty line at EOF.
    + Copy summary from Debian's short description.
    + Spell out each (build) dependency on one line.
    + Whitespace-only fixes.
    + Backport changes from debian/rules.
    + Copy *.la file removal mechanism from debian/rules.
    + Pull in lsb-release on *SuSE systems and redhat-lsb otherwise for
      lsb_release, needed at package configuration time.
    + Enable hardening in a low-effort way.
    + Disable debugsource... disabling. Debug packages are actually useful!
    + Copy configure flags from debian/rules{,.flags}. Most compiler flags
      should be getting passed down automatically through the %configure
      macro, but CPPFLAGS is special and seemingly not defined in
      redhat-rpm-macros (or the *SuSE equivalent) and is hence passed-down
      manually. %{__global_ldflags} is empty and unknown on some systems, so
      copy workaround from nx-libs for that one.